# DevOps

./: .gitignore  PLAN.md  README.md  REQUIREMENTS.md  briteNana.md  cleanedNana.md  fullNana.txt  path.txt  thingsWeDid.md  usefulCommands.txt
.github/workflows/: deploy.yml
docs/: GITHUB_SECRETS.md  OIDC.md  PLAN.md  README.md  REASONING.md  REFERENCE.md  SETUP_GUIDE.md  thingsWeDid.md
static-site-deployer/: .gitignore  .pre-commit-config.yaml  COMMANDS.md  HOWTO.md  README.md  howTo.md  pyproject.toml
static-site-deployer/.github/workflows/: deploy.yml
static-site-deployer/.lighthouseci/: lhr-1750734013210.html  lhr-1750734013210.json  lhr-1750734027900.html  lhr-1750734027900.json  lhr-1750734041181.html  lhr-1750734041181.json  links.json
static-site-deployer/cli/: hashutil.py  invalidate.py  main.py  uploader.py
static-site-deployer/infra/: main.tf  oidc.tf
static-site-deployer/site-sample/: index.html
static-site-deployer/tests/: test_hash.py
