[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "static-site-deployer"
version = "0.1.0"
description = "Deploy static sites to S3 + CloudFront with zero long-lived keys"
authors = [{name = "Ryan Patty", email = "ryan@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
]

[project.scripts]
deploy_site = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "mypy>=1.8.0",
    "types-requests",
    "types-boto3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ICN", "INP", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "W503", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 